# livraria

./: pyproject.toml
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_editora.py  0003_autor_livro.py  0004_alter_autor_options.py  0005_alter_editora_site_alter_livro_isbn.py
livraria/: settings.py  urls.py
